Added function at the script tag, that will hide the lower_base if home.html is displayed

--- a/templates/base.html
+++ b/templates/base.html
@@ -52,14 +52,13 @@
 			</div>
 		</div>
 	</div>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+</body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script type="text/javascript">
 		$(document).ready(function(){
-            $("#favourite_button").click(function(){
-                $("#favourite_light").css("color", "green");
-            });
+            if ($('#home_container').length) {
+            $('#lower_base').hide();
+            }
         });
 	</script>
-</body>
-
 </html>
