--- a/templates/exoplanets.html
+++ b/templates/exoplanets.html
@@ -19,6 +19,8 @@
 			<a
 				href="{{ url_for('gas_giants_planets') }}"><button class="top_buttons buttons">gas giants</button></a>
 		</div>
+        <a
+				href="{{ url_for('size') }}"><button class="top_buttons buttons">sort by size</button></a>
 	</div>
 	<div class="row">
 		{% for exoplanet in exoplanets %}
