--- a/templates/exoplanets.html
+++ b/templates/exoplanets.html
@@ -20,7 +20,9 @@
 				href="{{ url_for('gas_giants_planets') }}"><button class="top_buttons buttons">gas giants</button></a>
 		</div>
         <a
-				href="{{ url_for('size') }}"><button class="top_buttons buttons">sort by size</button></a>
+				href="{{ url_for('small_to_large') }}"><button class="top_buttons buttons">sort by size</button></a>
+        <a
+				href="{{ url_for('large_to_small') }}"><button class="top_buttons buttons">large to small</button></a>
 	</div>
 	<div class="row">
 		{% for exoplanet in exoplanets %}
