--- a/templates/exoplanets.html
+++ b/templates/exoplanets.html
@@ -7,23 +7,33 @@
 		</div>
 	</div>
 	<div class="row main-action">
-		<div class="col-4 main_action_buttons">
+		<div class="col-3 main_action_buttons">
 			<a
 				href="{{ url_for('rocky_planets') }}"><button class="top_buttons buttons">rocky worlds</button></a>
 		</div>
-		<div class="col-4 main_action_buttons">
+		<div class="col-3 main_action_buttons">
 			<a
 				href="{{ url_for('favourite_list') }}"><button class="top_buttons buttons">favourites</button></a>
 		</div>
-		<div class="col-4 main_action_buttons">
+		<div class="col-3 main_action_buttons">
 			<a
-				href="{{ url_for('gas_giants_planets') }}"><button class="top_buttons buttons">gas giants</button></a>
+				href="{{ url_for('gas_giants_planets') }}"><button class="top_buttons buttons"> gas giants</button></a>
 		</div>
-        <a
+        <div class="col-3 dropdown">
+  <button style="padding-top:.1rem" class="btn dropdown-toggle top_buttons buttons" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    sort by size
+  </button>
+  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+    <a class="dropdown-item" href="#">Action</a>
+    <a class="dropdown-item" href="#">Another action</a>
+    <a class="dropdown-item" href="#">Something else here</a>
+  </div>
+</div>
+    </div>
+    <a
 				href="{{ url_for('small_to_large') }}"><button class="top_buttons buttons">sort by size</button></a>
         <a
 				href="{{ url_for('large_to_small') }}"><button class="top_buttons buttons">large to small</button></a>
-	</div>
 	<div class="row">
 		{% for exoplanet in exoplanets %}
 		<div class="col-4">
