Added links for small_to_large and large_to_small at dropdown button

--- a/templates/exoplanets.html
+++ b/templates/exoplanets.html
@@ -24,9 +24,8 @@
     sort by size
   </button>
   <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-    <a class="dropdown-item" href="#">Action</a>
-    <a class="dropdown-item" href="#">Another action</a>
-    <a class="dropdown-item" href="#">Something else here</a>
+    <a class="dropdown-item" href="{{ url_for('small_to_large') }}">Small To Large</a>
+    <a class="dropdown-item" href="{{ url_for('large_to_small') }}">Large To Small</a>
   </div>
 </div>
     </div>
