Created html pages for displaying sorted exoplanets from favourites list

--- a/templates/small_to_large.html
+++ b/templates/small_to_large.html
@@ -7,17 +7,23 @@
 		</div>
 	</div>
 	<div class="row main-action">
-		<div class="col-4 main_action_buttons">
-			<a
-				href="{{ url_for('rocky_planets') }}"><button class="top_buttons buttons">rocky worlds</button></a>
+		<div class="col-3 main_action_buttons">
+			<a href="{{ url_for('rocky_planets') }}"><button class="top_buttons buttons">rocky worlds</button></a>
 		</div>
-		<div class="col-4 main_action_buttons">
-			<a
-				href="{{ url_for('favourite_list') }}"><button class="top_buttons buttons">favourites</button></a>
+		<div class="col-3 main_action_buttons">
+			<a href="{{ url_for('favourite_list') }}"><button class="top_buttons buttons">favourites</button></a>
 		</div>
-		<div class="col-4 main_action_buttons">
-			<a
-				href="{{ url_for('gas_giants_planets') }}"><button class="top_buttons buttons">gas giants</button></a>
+		<div class="col-3 main_action_buttons">
+			<a href="{{ url_for('gas_giants_planets') }}"><button class="top_buttons buttons"> gas giants</button></a>
+		</div>
+		<div class="col-3 dropdown">
+			<button style="padding-top:.1rem" class="btn dropdown-toggle top_buttons buttons" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    sort by size
+  </button>
+			<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+				<a class="dropdown-item" href="{{ url_for('small_to_large') }}">Small To Large</a>
+				<a class="dropdown-item" href="{{ url_for('large_to_small') }}">Large To Small</a>
+			</div>
 		</div>
 	</div>
 	<div class="row">
