--- a/templates/small_to_large_favourites.html
+++ b/templates/small_to_large_favourites.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
 {% block content %}
 <div style="margin-top:5rem" class="container">
-	<div class="row">
-		<div style="text-align:center" class="col-12">
-			<h1 class="title_exoplanet_page">exoplanets</h1>
-		</div>
-	</div>
+<div class="row">
+<div style="text-align:center" class="col-12">
+<h1 class="title_exoplanet_page">favourites list</h1>
+</div>
+</div>
 	<div class="row main-action">
 		<div class="col-3 main_action_buttons">
 			<a href="{{ url_for('favourite_rocky_planets') }}">
@@ -33,27 +33,28 @@
 		</div>
 	</div>
 	<div class="row">
-		{% for exoplanet in larged_sized %}
+		{% for favourite_exoplanet in sized_exoplanets %}
 		<div class="col-4">
 			<div class="exoplanets_holder">
 				<div class="image_holder">
-					<img class="zoom_image" src="{{ exoplanet.exoplanet_image }}" width="100%" height="100%" alt="">
+					<img class="zoom_image" src="{{favourite_exoplanet.exoplanet_image}}" width="100%" height="100%" alt="">
                 </div>
-					<p id="exoplanet_name" class="exoplanet_properties"><strong>{{exoplanet.planet_name}}</strong></p>
-					<hr class="separator">
-					<p class="exoplanet_properties"><strong>Type:</strong> {{exoplanet.type}}</p>
-					<hr class="separator">
-					<p class="exoplanet_properties"><strong>Star System:</strong> {{exoplanet.star_system}} </p>
-					<hr class="separator">
-					<div class="centered_buttons">
-						<a href="{{ url_for('add_favourites', exoplanet_id=exoplanet._id)}}"
-							id="margin-left"><button id="favourite_button" class="exoplanets_display_buttons buttons">Add Favourites</button></a>
-						<a href="{{ url_for('detailed_exoplanet', exoplanet_id=exoplanet._id) }}"
-							id="float_right"><button class="exoplanets_display_buttons buttons">Details</button></a>
-					</div>
+				<p id="exoplanet_name" class="exoplanet_properties"><strong>{{favourite_exoplanet.planet_name}}</strong>
+				</p>
+				<hr class="separator">
+				<p class="exoplanet_properties"><strong>Type:</strong> {{favourite_exoplanet.type}}</p>
+				<hr class="separator">
+				<p class="exoplanet_properties"><strong>Star System:</strong> {{favourite_exoplanet.star_system}}</p>
+				<hr class="separator">
+				<div class="centered_buttons">
+					<a href="{{ url_for('delete_favourite', exoplanet_id=favourite_exoplanet._id)}}"
+						id="margin-left"><button class="exoplanets_display_buttons buttons">Delete</button></a>
+					<a href="{{ url_for('calculate_weight', exoplanet_id=favourite_exoplanet._id) }}"
+						id="float_right"><button class="exoplanets_display_buttons buttons">Calculate Weight</button></a>
 				</div>
 			</div>
-			{% endfor %}
 		</div>
+		{% endfor %}
 	</div>
-	{% endblock %}
+</div>
+{% endblock %}
