--- a/templates/exoplanets.html
+++ b/templates/exoplanets.html
@@ -8,31 +8,25 @@
 	</div>
 	<div class="row main-action">
 		<div class="col-3 main_action_buttons">
-			<a
-				href="{{ url_for('rocky_planets') }}"><button class="top_buttons buttons">rocky worlds</button></a>
+			<a href="{{ url_for('rocky_planets') }}"><button class="top_buttons buttons">rocky worlds</button></a>
 		</div>
 		<div class="col-3 main_action_buttons">
-			<a
-				href="{{ url_for('favourite_list') }}"><button class="top_buttons buttons">favourites</button></a>
+			<a href="{{ url_for('favourite_list') }}"><button class="top_buttons buttons">favourites</button></a>
 		</div>
 		<div class="col-3 main_action_buttons">
-			<a
-				href="{{ url_for('gas_giants_planets') }}"><button class="top_buttons buttons"> gas giants</button></a>
+			<a href="{{ url_for('gas_giants_planets') }}"><button class="top_buttons buttons">gas giants</button></a>
 		</div>
-        <div class="col-3 dropdown">
-  <button style="padding-top:.1rem" class="btn dropdown-toggle top_buttons buttons" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+		<div class="col-3 dropdown">
+			<button style="padding-top:.1rem" class="dropdown-toggle top_buttons buttons" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
     sort by size
   </button>
-  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-    <a class="dropdown-item" href="{{ url_for('small_to_large') }}">Small To Large</a>
-    <a class="dropdown-item" href="{{ url_for('large_to_small') }}">Large To Small</a>
-  </div>
-</div>
-    </div>
-    <a
-				href="{{ url_for('small_to_large') }}"><button class="top_buttons buttons">sort by size</button></a>
-        <a
-				href="{{ url_for('large_to_small') }}"><button class="top_buttons buttons">large to small</button></a>
+			<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+				<a class="dropdown-item" href="{{ url_for('small_to_large') }}">Small To Large</a>
+				<a class="dropdown-item" href="{{ url_for('large_to_small') }}">Large To Small</a>
+                <a class="dropdown-item" href="{{ url_for('exoplanets_display') }}">Default Display</a>
+			</div>
+		</div>
+	</div>
 	<div class="row">
 		{% for exoplanet in exoplanets %}
 		<div class="col-4">
