--- a/static/css/style.css
+++ b/static/css/style.css
@@ -174,6 +174,11 @@ i {
     transform: scale(1.2);
 }
 
+#exoplanet_page_title_container {
+    text-align: center;
+    margin-top: 1.5rem;
+}
+
 .title_exoplanet_page {
     letter-spacing: .5rem;
     text-transform: uppercase;
