Gave id of exoplanet_page_title_container to main title

--- a/templates/rocky_planets.html
+++ b/templates/rocky_planets.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div style="margin-top:5rem" class="container">
 	<div class="row">
-		<div style="text-align:center" class="col-12">
+		<div id="exoplanet_page_title_container" class="col-12">
 			<h1 class="title_exoplanet_page">rocky worlds</h1>
 		</div>
 	</div>
