--- a/static/css/style.css
+++ b/static/css/style.css
@@ -262,10 +262,12 @@ i {
 
 #detailed_exoplanet_container {
     margin-top: 5rem;
+    margin-bottom: 1.5rem;
 }
 
 #detailed_exoplanet_title {
     text-align: center;
+    margin-top: 1.5rem;
 }
 
 #exoplanet_display {
