Created add_exoplanet message

--- a/templates/exoplanets.html
+++ b/templates/exoplanets.html
@@ -50,5 +50,12 @@
 			</div>
 			{% endfor %}
 		</div>
+        <div style="margin:2rem 0 2.2rem 0" class="row">
+        <div class="col-12">
+        <div id="add_exoplanet_message">
+        <p>Can't find your favourite exoplanet in the main list? Add any exoplanet to your favourites list by simply entering its details here.</p>
+        </div>
+        </div>
+        </div>
 	</div>
 	{% endblock %}
