--- a/static/css/style.css
+++ b/static/css/style.css
@@ -240,6 +240,17 @@ i {
     margin-bottom: 0;
 }
 
+#add_exoplanet_message a {
+    color: #e5e5dc;
+    font-weight: 700;
+    font-style: italic;
+}
+
+#add_exoplanet_message a:hover {
+    text-decoration: none;
+    opacity: .6;
+}
+
 /* already_favourite messsage page starts here */
 
 #message_container {
