Capitalize 'favourites list' text from add_exoplanet_message

--- a/templates/exoplanets.html
+++ b/templates/exoplanets.html
@@ -53,7 +53,7 @@
         <div style="margin:2rem 0 2.5rem 0" class="row">
         <div class="col-12">
         <div id="add_exoplanet_message">
-        <p>Can't find your favourite exoplanet in the main list? Add any exoplanet to your favourites list by simply entering its details <a href="{{ url_for('add_exoplanet') }}">here</a>.</p>
+        <p>Can't find your favourite exoplanet in the main list? Add any exoplanet to your Favourites List by simply entering its details <a href="{{ url_for('add_exoplanet') }}">here</a>.</p>
         </div>
         </div>
         </div>
