Removed title_container from the row and created separated row for it

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,10 @@
 {% extends 'base.html' %}
 {% block content %}
 <div id="home_container" class="container-fluid">
-	<div id="home" class="row">
+	<div class="row">
+		<div id="home" class="col-12"></div>
+	</div>
+	<div id="title_area" class="row">
 		<div id="title_container" class="col-12">
 			<h1 id="title">other worlds</h1>
 			<h2 id="sub_title">brief guide to exoplanets</h2>
