--- a/templates/exoplanet_weight.html
+++ b/templates/exoplanet_weight.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<div style="margin-top:15rem" class="container">
+<div style="margin-top:21rem;margin-bottom:12rem;" class="container">
 	<div class="row">
 		<div class="col-12">
         <div id="weight_message">
