--- a/templates/add_favourites.html
+++ b/templates/add_favourites.html
@@ -32,6 +32,13 @@
 			</div>
 		</div>
 	</div>
+    <div class="row">
+    <div class="col-12">
+    <div id="add_favourites_message">
+    <p>your favourites list is empty.</p>
+    </div>
+    </div>
+    </div>
 	<div class="row">
 		{% for favourite_exoplanet in favourite_exoplanets %}
 		<div class="col-4">
