--- a/templates/add_favourites.html
+++ b/templates/add_favourites.html
@@ -1,28 +1,28 @@
 {% extends 'base.html' %}
 {% block content %}
 <div style="margin-top:5rem" class="container">
-<div class="row">
-<div id="exoplanet_page_title_container" class="col-12">
-<h1 class="title_exoplanet_page">favourites list</h1>
-</div>
-</div>
+	<div class="row">
+		<div id="exoplanet_page_title_container" class="col-12">
+			<h1 class="title_exoplanet_page">favourites list</h1>
+		</div>
+	</div>
 	<div class="row main-action">
 		<div class="col-3 main_action_buttons">
 			<a href="{{ url_for('favourite_rocky_planets') }}">
 				<button class="buttons top_buttons">favourites rocky worlds</button>
 			</a>
 		</div>
-        <div class="col-3 main_action_buttons">
+		<div class="col-3 main_action_buttons">
 			<a href="{{ url_for('exoplanets_display') }}">
-            <button class="buttons top_buttons">main list</button>
-            </a>
+				<button class="buttons top_buttons">main list</button>
+			</a>
 		</div>
 		<div class="col-3 main_action_buttons">
 			<a href="{{ url_for('favourite_gas_giants') }}">
 				<button class="buttons top_buttons">favourites gas giants</button>
 			</a>
 		</div>
-        <div class="col-3 dropdown">
+		<div class="col-3 dropdown">
 			<button style="padding-top:.1rem" class="dropdown-toggle top_buttons buttons" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
     sort by size
   </button>
@@ -32,13 +32,13 @@
 			</div>
 		</div>
 	</div>
-    <div class="row">
-    <div class="col-12">
-    <div id="add_favourites_message">
-    <p>your favourites list is empty.</p>
-    </div>
-    </div>
-    </div>
+	<div id="empty_message" class="row">
+		<div class="col-12">
+			<div id="add_favourites_message">
+				<p>your favourites list is empty.</p>
+			</div>
+		</div>
+	</div>
 	<div class="row">
 		{% for favourite_exoplanet in favourite_exoplanets %}
 		<div class="col-4">
@@ -46,22 +46,24 @@
 				<div class="image_holder">
 					<img class="zoom_image" src="{{favourite_exoplanet.exoplanet_image}}" width="100%" height="100%" alt="">
                 </div>
-				<p id="exoplanet_name" class="exoplanet_properties"><strong>{{favourite_exoplanet.planet_name}}</strong>
-				</p>
-				<hr class="separator">
-				<p class="exoplanet_properties"><strong>Type:</strong> {{favourite_exoplanet.type}}</p>
-				<hr class="separator">
-				<p class="exoplanet_properties"><strong>Star System:</strong> {{favourite_exoplanet.star_system}}</p>
-				<hr class="separator">
-				<div class="centered_buttons">
-					<a href="{{ url_for('delete_favourite', exoplanet_id=favourite_exoplanet._id)}}"
-						id="margin-left"><button class="exoplanets_display_buttons buttons">Delete</button></a>
-					<a href="{{ url_for('calculate_weight', exoplanet_id=favourite_exoplanet._id) }}"
-						id="float_right"><button class="exoplanets_display_buttons buttons">Calculate Weight</button></a>
+					<p id="exoplanet_name" class="exoplanet_properties">
+						<strong>{{favourite_exoplanet.planet_name}}</strong>
+					</p>
+					<hr class="separator">
+					<p class="exoplanet_properties"><strong>Type:</strong> {{favourite_exoplanet.type}}</p>
+					<hr class="separator">
+					<p class="exoplanet_properties"><strong>Star System:</strong> {{favourite_exoplanet.star_system}}
+					</p>
+					<hr class="separator">
+					<div class="centered_buttons">
+						<a href="{{ url_for('delete_favourite', exoplanet_id=favourite_exoplanet._id)}}"
+							id="margin-left"><button class="exoplanets_display_buttons buttons">Delete</button></a>
+						<a href="{{ url_for('calculate_weight', exoplanet_id=favourite_exoplanet._id) }}"
+							id="float_right"><button class="exoplanets_display_buttons buttons">Calculate Weight</button></a>
+					</div>
 				</div>
 			</div>
+			{% endfor %}
 		</div>
-		{% endfor %}
 	</div>
-</div>
-{% endblock %}
+	{% endblock %}
