Created function in script tags to display add_favourites message if favourites list is empty

--- a/templates/base.html
+++ b/templates/base.html
@@ -62,6 +62,9 @@
             if ($('#home_container').length) {
             $('#lower_base').hide();
             };
+            if ($('.exoplanets_holder').length) {
+            $('#empty_message').hide();
+            }
         });
 </script>
 
