Modified text from message if favourites list is empty

--- a/templates/add_favourites.html
+++ b/templates/add_favourites.html
@@ -35,7 +35,7 @@
 	<div id="empty_message" class="row">
 		<div class="col-12">
 			<div id="add_favourites_message">
-				<p>your favourites list is empty.</p>
+				<p>your list of favourites exoplanets is currently empty.</p>
 			</div>
 		</div>
 	</div>
