--- a/templates/about.html
+++ b/templates/about.html
@@ -3,7 +3,7 @@
 <div style="margin-top:5rem" class="container">
 	<div class="row">
 		<div id="exoplanet_page_title_container" class="col-12">
-			<h1 class="title_exoplanet_page">exoplanets</h1>
+			<h1 class="title_exoplanet_page">about</h1>
 		</div>
 	</div>
 	<div class="row main-action">
@@ -14,5 +14,19 @@
 			<a href="{{ url_for('favourite_list') }}"><button class="top_buttons buttons">favourites</button></a>
 		</div>
 	</div>
+	<div id="about_text_container" class="row">
+		<div class="col-12">
+			<div id="about_text">
+				<p style="padding-bottom:0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+					et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+					aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur.</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+					et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+					aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur.</p>
+			</div>
+		</div>
 	</div>
-	{% endblock %}
+</div>
+{% endblock %}
