Wrote text about the site to about message

--- a/templates/about.html
+++ b/templates/about.html
@@ -17,14 +17,17 @@
 	<div id="about_text_container" class="row">
 		<div class="col-12">
 			<div id="about_text">
-				<p style="padding-bottom:0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-					et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-					aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur.</p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-					et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-					aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur.</p>
+				<p style="padding-bottom:0">An exoplanet, or extrasolar planet, is a planet outside the Solar System.
+					Welcome to OTHER WORLDS - a site that offers you a biref guide to some of the most relevant
+					exoplanets discovered up to date. You will have your own list of favourite exoplanets
+					in which you can add any of the planets from our main list. If you can't find in our main list an
+					exoplanet that you would like to add to your Favourites List, not a problem. You can add any
+					exoplanet
+					that you prefer to your Favourites List by simply entering its details into the form provided.</p>
+				<p>Contrary to what's depicting in most SCI FI movies, a fun fact about going to other planets is that
+					your weight difers from that of on Earth due to their different gravity attraction. This site also
+					gives you the opportunity to quickly find out your weight on each of your favourite exoplanet.
+                    Enjoy your trip to other worlds!</p>
 			</div>
 		</div>
 	</div>
