--- a/templates/about.html
+++ b/templates/about.html
@@ -25,7 +25,7 @@
 					exoplanet
 					that you prefer to your Favourites List by simply entering its details into the form provided.</p>
 				<p>Contrary to what's depicting in most SCI FI movies, a fun fact about going to other planets is that
-					your weight difers from that of on Earth due to their different gravity attraction. This site also
+					your weight differs from that of on Earth due to their different gravity attraction. This site also
 					gives you the opportunity to quickly find out your weight on each of your favourite exoplanet.
                     Enjoy your trip to other worlds!</p>
 			</div>
