--- a/templates/about.html
+++ b/templates/about.html
@@ -4,6 +4,10 @@
 	<div class="row">
 		<div id="exoplanet_page_title_container" class="col-12">
 			<h1 class="title_exoplanet_page">about</h1>
+            <div>
+            <p id="quote">"The Earth is a very small stage in a vast cosmic arena."</p>
+            <p id="quote_author">Carl Sagan</p>
+            </div>
 		</div>
 	</div>
 	<div class="row main-action">
@@ -17,7 +21,11 @@
 	<div id="about_text_container" class="row">
 		<div class="col-12">
 			<div id="about_text">
-				<p style="padding-bottom:0">An exoplanet, or extrasolar planet, is a planet outside the Solar System.
+				<p style="padding-bottom:0">Exoplanets are planets that orbit a star other than our sun. The prefix exo
+					comes from the Greek and means outside; these worlds are far, far outside our own solar system.
+					Astronomers have confirmed more than 4,000 exoplanets orbiting distant stars, with at least 1,000
+					more more awaiting confirmation.</p>
+				<p style="padding-bottom:0">
 					Welcome to OTHER WORLDS - a site that offers you a biref guide to some of the most relevant
 					exoplanets discovered up to date. You will have your own list of favourite exoplanets
 					in which you can add any of the planets from our main list. If you can't find in our main list an
@@ -27,7 +35,7 @@
 				<p>Contrary to what's depicting in most SCI FI movies, a fun fact about going to other planets is that
 					your weight differs from that of on Earth due to their different gravity attraction. This site also
 					gives you the opportunity to quickly find out your weight on each of your favourite exoplanet.
-                    Enjoy your trip to other worlds!</p>
+					Enjoy your trip to other worlds!</p>
 			</div>
 		</div>
 	</div>
