Positioned and syled main form

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -429,6 +429,13 @@ i {
     margin: 0 2.5%;
 }
 
+/* add_exoplanet.html page starts here */
+
+#form_container {
+    width: 50%;
+    margin: 0 auto;
+}
+
 
 
 
