Set margin-bottom to .5rem to all fields

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -436,6 +436,14 @@ i {
     margin: 0 auto;
 }
 
+#form_container div {
+    margin-bottom: .5rem;
+}
+
+#add_button {
+    margin-top: 1.5rem;
+}
+
 
 
 
