--- a/static/css/style.css
+++ b/static/css/style.css
@@ -432,7 +432,7 @@ i {
 /* add_exoplanet.html page starts here */
 
 #form_container {
-    width: 50%;
+    width: 30rem;
     margin: 0 auto;
 }
 
@@ -442,6 +442,8 @@ i {
 
 #add_button {
     margin-top: 1.5rem;
+    width: 30rem;
+    height: 3.6rem;
 }
 
 
