--- a/static/css/style.css
+++ b/static/css/style.css
@@ -377,7 +377,7 @@ i {
 
 /* calculate_weight.html page starts here */
 
-#form_container {
+#enter_weight_container {
     margin-top: 15rem;
     text-align: center;
 }
