--- a/templates/calculate_weight.html
+++ b/templates/calculate_weight.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<div id="form_container" class="container">
+<div id="enter_weight_container" class="container">
 <div class="row">
 <div class="col-12">
 <h1>{{ exoplanet.planet_name }}</h1>
