Removed inline styling at options

--- a/templates/add_exoplanet.html
+++ b/templates/add_exoplanet.html
@@ -29,8 +29,8 @@
   </div><hr class="separator">
 								<div class="form-group">
 									<select name="type" class="form-control input_planet" id="exampleFormControlSelect1" aria-placeholder="Type">
-      <option style="color:white" class="type_input" value="rocky">rocky</option>
-      <option class="type_input" value="gas">gas</option>
+      <option value="rocky">rocky</option>
+      <option value="gas">gas</option>
     </select>
 								</div><hr class="separator">
 								<div class="form-group">
@@ -38,7 +38,7 @@
   </div><hr class="separator">
 									<div class="form-group">
 										<input name="mass" type="text" class="form-control input_planet" id="mass" placeholder="Mass">
-  </div><hr class="separator">
+  </div><hr style="margin-bottom:0" class="separator">
 
 										<button id="add_button" type="submit" class="btn btn-primary buttons">add exoplanet</button>
 				</form>
