--- a/static/css/style.css
+++ b/static/css/style.css
@@ -450,6 +450,7 @@ i {
     letter-spacing: .2rem;
     height: 3rem;
     text-align: center;
+    opacity: .8;
 }
 
 .input_planet:focus {
@@ -481,6 +482,45 @@ select {
     font-size: 130%;
     letter-spacing: .2rem;
 }
+
+#guide {
+    width: 30rem;
+    height: 28.175rem;
+    background-color: #7a2048;
+    color: #e5e5dc;
+    border: 5px solid #408ec6;
+    margin: 0 auto;
+    padding-top: 3.5%;
+    box-sizing: border-box;
+    text-align: center;
+    letter-spacing: .1rem;
+    text-transform: uppercase;
+    overflow: hidden;
+}
+
+#accordionExample {
+    margin-top: 5%;
+}
+
+.card {
+    background-color: #408ec6;
+    color: #e5e5dc;
+    border-radius: 0; 
+}
+
+.guide_text {
+    color: #e5e5dc;
+    text-transform: uppercase;
+    letter-spacing: .2rem;
+}
+
+.guide_text:hover {
+    text-decoration: none;
+    color: #e5e5dc;
+    opacity: .6;
+}
+
+
 
 
 
