--- a/templates/add_exoplanet.html
+++ b/templates/add_exoplanet.html
@@ -15,7 +15,7 @@
 		</div>
 	</div>
 	<div style="margin-top:3rem;" class="row">
-		<div class="col-6">
+		<div id="insert_form" class="col-6">
 			<div id="form_container">
 				<form action="{{ url_for('insert_exoplanet') }}" method="POST">
 					<div class="form-group">
@@ -105,6 +105,9 @@
 						</div>
 					</div>
 				</div>
+                <p id="exoplanets_link">
+                <a id="exoplanets_anchor" href="https://en.wikipedia.org/wiki/Lists_of_exoplanets" target="_blank" aria-label="list of explanets from wikipedia">wikipedia.org</a>
+                </p>
 			</div>
 		</div>
 	</div>
