--- a/templates/base.html
+++ b/templates/base.html
@@ -35,28 +35,18 @@
 			</ul>
 		</div>
 	</nav>
-	{% block content %}
-	{% endblock %}
-	<div id="lower_base" class="container-fluid">
-		<div class="row">
-			<div id="social_icons_container" class="col-12">
-				<i class="fab fa-facebook"></i>
-				<i class="fab fa-instagram"></i>
-				<i class="fab fa-youtube-square"></i>
+    <div id="icons_container" class="col-12">
+				<i class="fab fa-facebook-square"></i><br>
+				<i class="fab fa-instagram"></i><br>
+				<i class="fab fa-youtube-square"></i><br>
 				<i class="fab fa-twitter-square"></i>
 			</div>
-		</div>
-		<div class="row">
-			<div id="lower_text" class="col-12">
-				<p>OTHER WORLDS is a trademark of CosmosCorporation United Kingdom </p>
-			</div>
-		</div>
-	</div>
+	{% block content %}
+	{% endblock %}
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</script>
 <script type="text/javascript">
 	$(document).ready(function(){
             if ($('#home_container').length) {
