--- a/templates/add_exoplanet.html
+++ b/templates/add_exoplanet.html
@@ -52,12 +52,12 @@
 		</div>
 		<div id="guide-container" class="col-6">
 			<div id="guide">
-            <p>guide to insert exoplanet</p>
+				<p>guide to insert exoplanet</p>
 				<div class="accordion" id="accordionExample">
 					<div class="card">
 						<div class="card-header" id="headingOne">
 							<h2 class="mb-0">
-								<button class="guide_text btn btn-link btn-block collapsed" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+								<button class="guide_text btn btn-link btn-block" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
           general
         </button>
 							</h2>
@@ -82,7 +82,8 @@
 						<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
 							data-parent="#accordionExample">
 							<div class="card-body">
-								inserttin pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad
+								inserttin pariatur cliche reprehenderit, enim eiusmod high life accusamus terry
+								richardson ad
 								squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck
 								quinoa nesciunt laborum eiusmod.
 							</div>
@@ -105,9 +106,10 @@
 						</div>
 					</div>
 				</div>
-                <p id="exoplanets_link">
-                <a id="exoplanets_anchor" href="https://en.wikipedia.org/wiki/Lists_of_exoplanets" target="_blank" aria-label="list of explanets from wikipedia">wikipedia.org</a>
-                </p>
+				<p id="exoplanets_link">
+					<a id="exoplanets_anchor" href="https://en.wikipedia.org/wiki/Lists_of_exoplanets" target="_blank"
+						aria-label="list of explanets from wikipedia">wikipedia.org</a>
+				</p>
 			</div>
 		</div>
 	</div>
