--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,9 @@
 					<a class="nav-link nav_anchors" href="{{ url_for('home') }}">Home
 						<span class="sr-only">(current)</span></a>
 				</li>
+                <li class="nav-item">
+					<a class="nav-link nav_anchors" href="{{ url_for('about') }}">About</a>
+				</li>
 				<li class="nav-item">
 					<a class="nav-link nav_anchors" href="{{ url_for('exoplanets_display') }}">Main List</a>
 				</li>
