--- a/templates/add_favourites.html
+++ b/templates/add_favourites.html
@@ -59,7 +59,7 @@
 						<a
 							href="{{ url_for('delete_favourite', exoplanet_id=favourite_exoplanet._id)}}"><button class="favourites_display_buttons exoplanets_display_buttons buttons">Delete</button></a>
 						<a
-							href="{{ url_for('detailed_exoplanet', exoplanet_id=favourite_exoplanet._id) }}"><button class="favourites_display_buttons exoplanets_display_buttons buttons">Details</button></a>
+							href="{{ url_for('favourite_detailed', exoplanet_id=favourite_exoplanet._id) }}"><button class="favourites_display_buttons exoplanets_display_buttons buttons">Details</button></a>
 						<a
 							href="{{ url_for('calculate_weight', exoplanet_id=favourite_exoplanet._id) }}"><button class="favourites_display_buttons exoplanets_display_buttons buttons">calculate</button></a>
 					</div>
