Added wrong_data variable

--- a/templates/wrong_data.html
+++ b/templates/wrong_data.html
@@ -6,6 +6,6 @@
 			<h1 class="title_exoplanet_page">wrong data inserted</h1>
 		</div>
 	</div>
-    {{ exoplanet_mass_type }}
+    <p>{{ wrong_data }}</p>
 </div>
 	{% endblock %}
