--- a/static/css/style.css
+++ b/static/css/style.css
@@ -505,7 +505,6 @@ select {
     box-sizing: border-box;
     text-align: center;
     letter-spacing: .1rem;
-    text-transform: uppercase;
     overflow: hidden;
 }
 
@@ -532,6 +531,10 @@ select {
     opacity: .6;
 }
 
+.card-body {
+   letter-spacing: .09rem;
+}
+
 #exoplanets_link {
     text-align: center;
     margin-top: 24%;
@@ -543,6 +546,29 @@ select {
     text-transform: lowercase;
     font-size: 90%;
 }
+
+/* mass_photo.html starts here */
+
+#photo_container {
+    width: 90%;
+    height: 35rem;
+    margin: 0 auto;
+}
+
+#mass_photo {
+    background-image: url(../images/mass_photo/mass_photo.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+}
+
+#photo_action_button {
+    margin: 6rem 0 2rem 0;
+    text-align: center;
+}
+
 
 
 
