--- a/templates/add_exoplanet.html
+++ b/templates/add_exoplanet.html
@@ -65,9 +65,8 @@
 						<div id="collapseOne" class="collapse show" aria-labelledby="headingOne"
 							data-parent="#accordionExample">
 							<div class="card-body">
-								Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad
-								squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck
-								quinoa nesciunt laborum eiusmod.
+								Please note that all fields are required. For documentation of exoplanets we suggest
+								wikipedia as a source. However there are plenty of other relevant sources out there for inspiration. 
 							</div>
 						</div>
 					</div>
@@ -82,10 +81,7 @@
 						<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
 							data-parent="#accordionExample">
 							<div class="card-body">
-								inserttin pariatur cliche reprehenderit, enim eiusmod high life accusamus terry
-								richardson ad
-								squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck
-								quinoa nesciunt laborum eiusmod.
+								<a href="{{ url_for('mass_photo') }}">mass_details</a>
 							</div>
 						</div>
 					</div>
