Added function to hide the icons container if the mass_photo.html is displayed

--- a/templates/base.html
+++ b/templates/base.html
@@ -53,10 +53,13 @@
 <script type="text/javascript">
 	$(document).ready(function(){
             if ($('#home_container').length) {
-            $('#lower_base').hide();
+                $('#icons_container').hide();
             };
             if ($('.exoplanets_holder').length) {
-            $('#empty_message').hide();
+                $('#empty_message').hide();
+            }
+            if ($('#mass_photo').length) {
+                $('#icons_container').hide();
             }
         });
 </script>
