--- a/templates/add_exoplanet.html
+++ b/templates/add_exoplanet.html
@@ -82,8 +82,14 @@
 						<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
 							data-parent="#accordionExample">
 							<div id="inserting_the_mass" class="card-body">
-								The planet's mass must be in relation to that of Earth's and expressed in <a href="https://en.wikipedia.org/wiki/Earth_mass" target="blank" aria-label="Earth mass as unit of measure">Earth mass (M⊕)</a>. At gas giants, all internet sources
-								will give you the planet's mass in relation to <a href="https://en.wikipedia.org/wiki/Jupiter_mass" target="blank" aria-label="Jupiter mass as unit of measure">Jupiter mass (Mj)</a>. Please convert into Earth
+								The planet's mass must be in relation to that of Earth's and expressed in <a
+									href="https://en.wikipedia.org/wiki/Earth_mass" target="blank"
+									aria-label="Earth mass as unit of measure">Earth mass (M⊕)</a>. At gas giants, all
+								internet sources
+								will give you the planet's mass in relation to <a
+									href="https://en.wikipedia.org/wiki/Jupiter_mass" target="blank"
+									aria-label="Jupiter mass as unit of measure">Jupiter mass (Mj)</a>. Please convert
+								it into Earth
 								mass before inserting. Jupiter mass is 318 times greater than Earth mass.
 								Please see <a href="{{ url_for('mass_photo') }}">here</a> the
 								location for planet's mass when searching on Wikipedia.
