Removed part of the text from 'inserting an exoplanet' guide

--- a/templates/add_exoplanet.html
+++ b/templates/add_exoplanet.html
@@ -52,7 +52,7 @@
 		</div>
 		<div id="guide-container" class="col-6">
 			<div id="guide">
-				<p>guide to insert exoplanet</p>
+				<h5>Guide To Insert An Exoplanet</h5>
 				<div class="accordion" id="accordionExample">
 					<div class="card">
 						<div class="card-header" id="headingOne">
